ngSwitch now uses enum

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+	Start editing to see some magic happen :)
 </p>
 <h4>Fruits</h4>
 <div *ngFor="let fruit of fruits">
-  <span>{{fruit.name}}</span>
-  <span> - </span>
-  <span [ngSwitch]="fruit.colour">
-    <span *ngSwitchCase="'red'" style="background: red;"> red </span>
-    <span *ngSwitchCase="'yellow'" style="background: yellow;"> yellow </span>
-    <span *ngSwitchDefault> unknown </span>
-  </span>
+	<span>{{fruit.name}}</span>
+	<span> - </span>
+	<span [ngSwitch]="fruit.colour">
+    <span *ngSwitchCase="colours.RED" style="background: red;"  class="coloured"> red </span>
+	<span *ngSwitchCase="colours.YELLOW" style="background: yellow;"  class="coloured"> yellow </span>
+	<span *ngSwitchDefault style="background: grey; color: white;"  class="coloured"> unknown </span>
+	</span>
 </div>
